infra/slskd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slskd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "slskd.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: slskd
          port: 5030
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-slskd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: slskd
  oidc:
    provider:
      issuer: "https://pocket-id.monederobox.dev"
    clientID: "251067da-6ff7-4e12-b671-77a69ce48992"
    clientSecret:
      name: slskd-oidc-secret
      namespace: slskd
    redirectURL: "https://slskd.monederobox.dev/oauth2/callback"
    scopes:
      - openid
      - profile
      - email
